--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -200,7 +200,7 @@
             <hr />
             <div class="row gtr-200" id="nxt3">
               <div class="col-6 col-12-medium">
-                <h2>置件機-高速機 FUJI-NXT III</h2>
+                <h2>FUJI - 貼片機 NXT III</h2>
                 <span class="image fit"
                   ><img src="images/eq/nxt32.png" alt=""
                 /></span>
