--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -99,7 +99,7 @@
                     >
                   </li>
                   <li>
-                    <a href="equipment.html#nxt3">置件機-高速機 FUJI-NXT III</a>
+                    <a href="equipment.html#nxt3">FUJI - 貼片機 NXT III</a>
                   </li>
                   <li>
                     <a href="equipment.html#g200">
