--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -174,7 +174,20 @@
               <div class="col-6 col-12-medium">
                 <h2>全自動印刷機 Europlacer EP-710</h2>
                 <p>
-                  1.自動定位架設鋼板<br />2.可自行設置清潔的間距以及擦拭的模式
+                  系列印刷機結合了高性能、高可靠性和卓越價值的承諾。<br />
+                  此系統的設計可應付嚴酷的大批量SMT生產，並結合了靈活性，在高混合中小批量生產環境中可快速設置和產品轉換。<br /><br />
+                  易用性，高端性能和低擁有成本的設計，此平台使用最先進的驅動控制技術，包括所有軸1微米分辨率的線性編碼器，和一套完全控製印刷過程的直觀軟件。<br /><br />
+                  印刷機配備齊全，標準產品特性包括軌道寬度自動調節，自動裝載網板，完全可編程的底部網板清潔甚至於自動錫膏檢查。<br />
+                  實際上涵蓋所有，無異常無需妥協完成您全程的SMT印刷工序。<br /><br />
+                  視覺系統使用獨特的雙移動攝像機Dual Roving
+                  camera（DRc）方法自動視覺定位。<br />
+                  這種創新的視覺系統不僅提供了最高級別的校正能力還包含了智能計算SmartCal。<br /><br />
+                  隨著基板和元件的持續小型化降低了工藝窗口，SmartCal
+                  為用戶直接提供了免費的校準。<br />
+                  SmartCal
+                  可以讓用戶保持最大的工藝窗口並維持機器壽命的最佳性能。<br />
+                  Speedprint還配備了獨特的印刷前檢查網板錫膏量的功能。<br />
+                  視覺系統使用基準標記點和/或PCB/網板焊盤校正PCB。<br />
                 </p>
               </div>
               <div class="col-6 col-12-medium">
