--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -31,7 +31,7 @@
           <section id="banner">
             <div class="content">
               <header>
-                <h1>百里助 <br />企業有限公司</h1>
+                <h1 style="font-size: 3em">百里助企業有限公司</h1>
                 <h2 style="font-weight: normal">
                   BAI LI CHU ENTERPRISE CO.,LTD
                 </h2>
