--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -35,6 +35,47 @@
               <h1>生產能力 Production Capacity</h1>
             </header>
 
+            <header class="major">
+              <h2>製程能力 Process Capability</h2>
+            </header>
+            <div class="row">
+              <div class="col-6 col-12-small">
+                <ul style="font-size: 18px">
+                  <li>
+                    PCB種類:單雙面多層板、鋁基板、雙面著裝板皆可生產加工。
+                  </li>
+                  <li>
+                    基板尺寸:最大610mm(L)*380mm(W)/最小50mm(L)*50mm(W)
+                  </li>
+                  <li>基板厚度:最大厚度4mm/最小厚度0.5mm</li>
+                  <li>零件尺寸:最小 01005 R/C</li>
+                  <li>可著裝最小IC腳距:0.2mm</li>
+                </ul>
+              </div>
+
+              <div class="col-6 col-12-small">
+                <ul style="font-size: 18px">
+                  <li>可著裝BGA球徑最小:0.15mm/球距0.25mm</li>
+                  <li>著裝機精度:+/-0.015mm/CHIP ; +/-0.05mm/QFP</li>
+                  <li>
+                    印刷機精度:+/-20um
+                  </li>
+                  <li>
+                    一般電容電阻(R.C)每日約280萬顆
+                  </li>
+                  <li>
+                    SMT全製程無鉛作業
+                  </li>
+                  <li>Sample打樣可快速交件</li>
+                  <li>
+                    鋼板尺寸:最大735mm(L)*735mm(W)
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <header class="major">
+              <h2>服務項目 Specialty OEM Service</h2>
+            </header>
             <div class="row">
               <div class="col-6 col-12-small">
                 <ul style="font-size: 18px">
