--- a/bailichu/contact.html
+++ b/bailichu/contact.html
@@ -162,7 +162,7 @@
               百里助企業為SMT之專業代工工廠，本公司成立迄今秉持著「誠信、專業、品質第一、客戶至上」的經營理念，不斷提升加工技術精進加工品質，精益求精，來滿足客戶之需求，務實踏實的管理經營亦廣受客戶們一致的好評。
             </p>
             <p>
-              本公司未來將繼續以高專業、高品質的生產製造，提供客戶滿意的產品品質，並以專業服務及高效率的精神來滿足客戶需求及提供客戶最完善的服務。
+              本公司以高專業、高品質的生產製造，提供客戶滿意的產品品質，並以專業服務及高效率的精神來滿足客戶需求及提供客戶最完善的服務。
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
