--- a/bailichu/contact.html
+++ b/bailichu/contact.html
@@ -35,11 +35,10 @@
           <section id="banner">
             <div class="content">
               <header>
-                <h1>百里助<br />企業有限公司<br /></h1>
+                <h1 style="font-size: 3em; margin: 0;">百里助企業有限公司</h1>
                 <h2 style="font-weight: normal">
                   BAI LI CHU ENTERPRISE CO.,LTD
                 </h2>
-                <!-- <p>We do our best.</p> -->
               </header>
               <p>
                 <span class="fa fa-phone"></span>
@@ -59,8 +58,8 @@
             <span class="image object">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.8558343570853!2d121.67217131510348!3d25.072874983954115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d53a78eb8cb5f%3A0xda8c4e24455d1bad!2zMjIx5paw5YyX5biC5rGQ5q2i5Y2A5aSn5ZCM6Lev5LiJ5q61MjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1569160175137!5m2!1szh-TW!2stw"
-                width="600"
-                height="450"
+                width="100%"
+                height="100%"
                 frameborder="0"
                 style="border:0;"
                 allowfullscreen=""
