--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -46,41 +46,25 @@
           </section>
           <section>
             <header class="major">
-              <h2>製程能力 Process Capability</h2>
+              <h2>服務項目 Specialty OEM Service</h2>
             </header>
-
             <div class="row">
               <div class="col-6 col-12-small">
                 <ul style="font-size: 18px">
+                  <li>SMT及DIP半成品、成品加工、代工</li>
                   <li>
-                    PCB種類:單雙面多層板、鋁基板、雙面著裝板皆可生產加工。
+                    PC相關周邊產品之來料加工、裝配、組立，各類印刷電路板組件
                   </li>
-                  <li>
-                    基板尺寸:最大610mm(L)*380mm(W)/最小50mm(L)*50mm(W)
-                  </li>
-                  <li>基板厚度:最大厚度4mm/最小厚度0.5mm</li>
-                  <li>零件尺寸:最小 01005 R/C</li>
-                  <li>可著裝最小IC腳距:0.2mm</li>
+                  <li>SMT表面著裝製程加工(單面/雙面)、點膠、全無鉛</li>
                 </ul>
               </div>
-
               <div class="col-6 col-12-small">
                 <ul style="font-size: 18px">
-                  <li>可著裝BGA球徑最小:0.15mm/球距0.25mm</li>
-                  <li>著裝機精度:+/-0.015mm/CHIP ; +/-0.05mm/QFP</li>
+                  <li>專業Sample全製程試製</li>
                   <li>
-                    印刷機精度:+/-20um
+                    3C產品類、各種介面卡、工業PC、行車紀錄器、通訊機板、電源供應器
                   </li>
-                  <li>
-                    一般電容電阻(R.C)每日約280萬顆
-                  </li>
-                  <li>
-                    SMT全製程無鉛作業
-                  </li>
-                  <li>Sample打樣可快速交件</li>
-                  <li>
-                    鋼板尺寸:最大735mm(L)*735mm(W)
-                  </li>
+                  <li>人工後焊/小量產測試、組裝、包裝/各類電子產品OEM</li>
                 </ul>
               </div>
             </div>
