--- a/eCloud/index.html
+++ b/eCloud/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
     <title>PAL Web Test Platform</title>
-    <link href="./css/app.f5608379.css" rel="preload" as="style" />
+    <link href="./css/app.9ef0f6aa.css" rel="preload" as="style" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="preload" as="style" />
-    <link href="./js/app.d28571a6.js" rel="preload" as="script" />
+    <link href="./js/app.f56a6cc6.js" rel="preload" as="script" />
     <link href="./js/chunk-vendors.4f0beaea.js" rel="preload" as="script" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="stylesheet" />
-    <link href="./css/app.f5608379.css" rel="stylesheet" />
+    <link href="./css/app.9ef0f6aa.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
@@ -21,7 +21,7 @@
       </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.4f0beaea.js"></script>
-    <script src="./js/app.d28571a6.js"></script>
+    <script src="./js/chunk-vendors.4f0beaea.js"></script
+    ><script src="./js/app.f56a6cc6.js"></script>
   </body>
 </html>
