--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -36,12 +36,12 @@
                   BAI LI CHU ENTERPRISE CO.,LTD
                 </h2>
               </header>
-              <p>
+              <p style="font-size: 15px">
                 百里助企業有限公司創立於1999年8月，<br />擁有專業的SMT代工、SMT打樣、SMT試產、與DIP加工能力。<br />在百里助，我們秉持高品質的產品理念，並以客戶為中心，<br />提供最專業的客戶服務。
               </p>
             </div>
             <span class="image object">
-              <img src="images/20.jpg" alt="" />
+              <img src="images/profile.jpg" alt="" />
             </span>
           </section>
           <section>
@@ -120,6 +120,21 @@
               </article>
             </div>
           </section>
+
+          
+          <section>
+            <header class="major">
+              <h2>
+              認證
+              </h2>
+            </header>
+            <div class="posts">
+              <article><a href="#" class="image"
+              >
+                <img src="images/ISO.bmp" alt=""/></a>
+              </article>
+            </div>
+          </section>
         </div>
       </div>
 
@@ -193,12 +208,35 @@
                 </ul>
               </li>
               <li>
-                <span class="opener">作業項目</span>
+                <span class="opener">範例</span>
                 <ul>
-                  <li><a href="#">Lorem Dolor</a></li>
-                  <li><a href="#">Ipsum Adipiscing</a></li>
-                  <li><a href="#">Tempus Magna</a></li>
-                  <li><a href="#">Feugiat Veroeros</a></li>
+                  <li>
+                    <span >範例1</span>
+                    <ul>
+                      <li><a href="#">Lorem Dolor</a></li>
+                      <li><a href="#">Ipsum Adipiscing</a></li>
+                      <li><a href="#">Tempus Magna</a></li>
+                      <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <span ></span>範例2</span>
+                    <ul>
+                      <li><a href="#">Lorem Dolor</a></li>
+                      <li><a href="#">Ipsum Adipiscing</a></li>
+                      <li><a href="#">Tempus Magna</a></li>
+                      <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <span ></span>範例3</span>
+                    <ul>
+                      <li><a href="#">Lorem Dolor</a></li>
+                      <li><a href="#">Ipsum Adipiscing</a></li>
+                      <li><a href="#">Tempus Magna</a></li>
+                      <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li><a href="elements.html">產品介紹</a></li>
