--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -233,8 +233,7 @@
               </div>
               <div class="col-6 col-12-medium">
                 <h2>
-                  電子零件貼裝機 <br />
-                  Electronic Part Mounter SONYSI-G200MK3
+                  SONY-貼片機<br> SI-G200 MK3
                 </h2>
                 <span class="image fit"
                   ><img src="images/eq/g2002.png" alt=""
@@ -425,8 +424,7 @@
                   </li>
                   <li>
                     <a href="equipment.html#g200">
-                      電子零件貼裝機 <br />
-                      Electronic Part Mounter SONY SI-G200MK3</a
+                      SONY-貼片機<br> SI-G200 MK3</a
                     >
                   </li>
                   <li>
