--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -122,8 +122,8 @@
                   </li>
                   <li>
                     <a href="equipment.html#g200">
-                      電子零件貼裝機 <br />
-                      Electronic Part Mounter SONY SI-G200MK3</a
+                      SONY-貼片機<br />
+                      SI-G200 MK3</a
                     >
                   </li>
                   <li>
