--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -233,7 +233,8 @@
               </div>
               <div class="col-6 col-12-medium">
                 <h2>
-                  SONY-貼片機<br> SI-G200 MK3
+                  SONY-貼片機<br />
+                  SI-G200 MK3
                 </h2>
                 <span class="image fit"
                   ><img src="images/eq/g2002.png" alt=""
@@ -245,7 +246,7 @@
               <div class="col-6 col-12-medium">
                 <h2>AOI 自動光學檢查機 <br />MV-8515-L</h2>
                 <span class="image fit"
-                  ><img src="images/eq/mv8515l3.jpeg" alt=""
+                  ><img src="images/eq/mv8515l5.jpg" alt=""
                 /></span>
               </div>
               <div class="col-6 col-12-medium">
@@ -424,7 +425,8 @@
                   </li>
                   <li>
                     <a href="equipment.html#g200">
-                      SONY-貼片機<br> SI-G200 MK3</a
+                      SONY-貼片機<br />
+                      SI-G200 MK3</a
                     >
                   </li>
                   <li>
