--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -311,7 +311,7 @@
               </div>
               <div class="col-6 col-12-medium">
                 <span class="image fit"
-                  ><img src="images/eq/gd2000.jpeg" alt=""
+                  ><img src="images/eq/gd2003.jpg" alt=""
                 /></span>
               </div>
             </div>
