--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -41,7 +41,7 @@
               </p>
             </div>
             <span class="image object">
-              <img src="images/profile.jpg" alt="" />
+              <img style="height: auto" src="images/profile.jpg" alt="" />
             </span>
           </section>
           <section>
