--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -405,10 +405,25 @@
                 <ul>
                   <li><a href="equipment.html">生產設備</a></li>
                   <li>
+                    <a href="equipment.html#nxt3">FUJI - 貼片機 NXT III</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#g200">
+                      SONY-貼片機<br />
+                      SI-G200 MK3</a
+                    >
+                  </li>
+                  <li>
                     <a href="equipment.html#ys12">YAMAHA 貼片機 - YS12</a>
                   </li>
                   <li>
                     <a href="equipment.html#ys12f">YAMAHA 貼片機 - YS12F</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
                   </li>
                   <li>
                     <a href="equipment.html#ep-710"
@@ -420,13 +435,19 @@
                       >錫膏檢測機(SPI): VITROX(V510I)</a
                     >
                   </li>
+
                   <li>
-                    <a href="equipment.html#nxt3">FUJI-貼片機 NXT III</a>
+                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
                   </li>
+
                   <li>
-                    <a href="equipment.html#g200">
-                      SONY-貼片機<br />
-                      SI-G200 MK3</a
+                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
+                  </li>
+
+                  <li>
+                    <a href="equipment.html#mv8515m"
+                      >AOI 自動光學檢查機<br />
+                      MV-8515-M</a
                     >
                   </li>
                   <li>
@@ -434,37 +455,42 @@
                       >AOI 自動光學檢查機 <br />MV-8515-L</a
                     >
                   </li>
-                  <li>
-                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
-                  </li>
                   <li><a href="equipment.html#xd7500">X-RAY XD7500</a></li>
                   <li>
-                    <a href="equipment.html#mv8515m"
-                      >AOI 自動光學檢查機<br />
-                      MV-8515-M</a
-                    >
+                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
                   </li>
                 </ul>
               </li>
               <li>
-                <span class="opener">作業項目</span>
+                <span class="opener">範例</span>
                 <ul>
-                  <li><a href="#">Lorem Dolor</a></li>
-                  <li><a href="#">Ipsum Adipiscing</a></li>
-                  <li><a href="#">Tempus Magna</a></li>
-                  <li><a href="#">Feugiat Veroeros</a></li>
+                  <li>
+                    <span>範例1</span>
+                    <ul>
+                      <li><a href="#">Lorem Dolor</a></li>
+                      <li><a href="#">Ipsum Adipiscing</a></li>
+                      <li><a href="#">Tempus Magna</a></li>
+                      <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <span>範例2</span>
+                    <ul>
+                      <li><a href="#">Lorem Dolor</a></li>
+                      <li><a href="#">Ipsum Adipiscing</a></li>
+                      <li><a href="#">Tempus Magna</a></li>
+                      <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <span>範例3</span>
+                    <ul>
+                      <li><a href="#">Lorem Dolor</a></li>
+                      <li><a href="#">Ipsum Adipiscing</a></li>
+                      <li><a href="#">Tempus Magna</a></li>
+                      <li><a href="#">Feugiat Veroeros</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li><a href="elements.html">產品介紹</a></li>
