--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -121,17 +121,17 @@
             </div>
           </section>
 
-          
           <section>
             <header class="major">
               <h2>
-              認證
+                認證
               </h2>
             </header>
             <div class="posts">
-              <article><a href="#" class="image"
-              >
-                <img src="images/ISO.bmp" alt=""/></a>
+              <article>
+                <a href="#" class="image">
+                  <img src="images/ISO.bmp" alt=""
+                /></a>
               </article>
             </div>
           </section>
@@ -154,10 +154,25 @@
                 <ul>
                   <li><a href="equipment.html">生產設備</a></li>
                   <li>
+                    <a href="equipment.html#nxt3">FUJI - 貼片機 NXT III</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#g200">
+                      SONY-貼片機<br />
+                      SI-G200 MK3</a
+                    >
+                  </li>
+                  <li>
                     <a href="equipment.html#ys12">YAMAHA 貼片機 - YS12</a>
                   </li>
                   <li>
                     <a href="equipment.html#ys12f">YAMAHA 貼片機 - YS12F</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
                   </li>
                   <li>
                     <a href="equipment.html#ep-710"
@@ -169,12 +184,19 @@
                       >錫膏檢測機(SPI): VITROX(V510I)</a
                     >
                   </li>
+
                   <li>
-                    <a href="equipment.html#nxt3">FUJI - 貼片機 NXT III</a>
+                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
                   </li>
+
                   <li>
-                    <a href="equipment.html#g200">
-                      SONY-貼片機<br> SI-G200 MK3</a
+                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
+                  </li>
+
+                  <li>
+                    <a href="equipment.html#mv8515m"
+                      >AOI 自動光學檢查機<br />
+                      MV-8515-M</a
                     >
                   </li>
                   <li>
@@ -182,27 +204,9 @@
                       >AOI 自動光學檢查機 <br />MV-8515-L</a
                     >
                   </li>
-                  <li>
-                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
-                  </li>
-                  <li>
-                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
-                  </li>
                   <li><a href="equipment.html#xd7500">X-RAY XD7500</a></li>
                   <li>
-                    <a href="equipment.html#mv8515m"
-                      >AOI 自動光學檢查機<br />
-                      MV-8515-M</a
-                    >
+                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
                   </li>
                 </ul>
               </li>
@@ -210,7 +214,7 @@
                 <span class="opener">範例</span>
                 <ul>
                   <li>
-                    <span >範例1</span>
+                    <span>範例1</span>
                     <ul>
                       <li><a href="#">Lorem Dolor</a></li>
                       <li><a href="#">Ipsum Adipiscing</a></li>
@@ -219,7 +223,7 @@
                     </ul>
                   </li>
                   <li>
-                    <span ></span>範例2</span>
+                    <span>範例2</span>
                     <ul>
                       <li><a href="#">Lorem Dolor</a></li>
                       <li><a href="#">Ipsum Adipiscing</a></li>
@@ -228,7 +232,7 @@
                     </ul>
                   </li>
                   <li>
-                    <span ></span>範例3</span>
+                    <span>範例3</span>
                     <ul>
                       <li><a href="#">Lorem Dolor</a></li>
                       <li><a href="#">Ipsum Adipiscing</a></li>
