--- a/bailichu/shopfloor.html
+++ b/bailichu/shopfloor.html
@@ -24,47 +24,23 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <a href="index.html" class="logo">
-              <strong>
-                <img width="300px" src="images/big-logo.png" alt="" />
-              </strong>
+            <a href="index.html" class="logo"
+              ><img width="300px" src="images/big-logo.png" alt="" />
             </a>
           </header>
 
-          <!-- Banner -->
-          <section id="banner">
-            <div class="content">
-              <header>
-                <h1 style="font-size: 3em; margin: 0;">百里助企業有限公司</h1>
-                <h2 style="font-weight: normal">
-                  BAI LI CHU ENTERPRISE CO.,LTD
-                </h2>
-              </header>
+          <!-- Content -->
+          <section>
+            <header class="main">
+              <h1>Shop-Floor 管理系統</h1>
+            </header>
+            <div class="box">
               <p>
-                <span class="fa fa-phone"></span>
-                電話: 02-8647-3497
-              </p>
-
-              <p>
-                <span class="fa fa-home" aria-hidden="true"></span>
-                地址: 新北市汐止區大同路三段210號1樓
-              </p>
-
-              <p>
-                <span class="fa fa-envelope" aria-hidden="true"></span>
-                客服信箱: nicole@bailichu.com.tw
+                本公司為增進生產效率及品質，特別導入MES置造管制系統(Manufacturing
+                Execution systen)也稱為Shop Floor control
+                該系統包含了智能倉庫管理，防錯料管理及生產品或吉維修管理等，使本公司縮短了備料、上料換線之時間，使生產更有效率，也可以管理追朔產品的生產及維修過程，使產品及損料的管理更智慧化、系統化，更重要的事已電腦進行稽核每一段製程的品質，確保產品生產的品質的真實性及一致性，以滿足客戶對嚴苛可信賴產品的要求。
               </p>
             </div>
-            <span class="image object">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.8558343570853!2d121.67217131510348!3d25.072874983954115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d53a78eb8cb5f%3A0xda8c4e24455d1bad!2zMjIx5paw5YyX5biC5rGQ5q2i5Y2A5aSn5ZCM6Lev5LiJ5q61MjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1569160175137!5m2!1szh-TW!2stw"
-                width="100%"
-                height="100%"
-                frameborder="0"
-                style="border:0;"
-                allowfullscreen=""
-              ></iframe>
-            </span>
           </section>
         </div>
       </div>
