--- a/bailichu2/index.html
+++ b/bailichu2/index.html
@@ -8,7 +8,10 @@
   <head>
     <title>Strongly Typed by HTML5 UP</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body class="homepage is-preload">
@@ -24,7 +27,9 @@
           <nav id="nav">
             <ul>
               <li>
-                <a class="icon solid fa-home" href="index.html"><span>公司介紹</span></a>
+                <a class="icon solid fa-home" href="index.html"
+                  ><span>公司介紹</span></a
+                >
               </li>
               <li>
                 <a href="#" class="icon fa-chart-bar"><span>生產能力</span></a>
@@ -44,16 +49,20 @@
                 </ul>
               </li>
               <li>
-                <a class="icon solid fa-cog" href="left-sidebar.html"><span>生產設備</span></a>
+                <a class="icon solid fa-cog" href="left-sidebar.html"
+                  ><span>生產設備</span></a
+                >
               </li>
               <li>
-                <a class="icon solid fa-retweet" href="right-sidebar.html"><span>作業項目</span></a>
+                <a class="icon solid fa-retweet" href="right-sidebar.html"
+                  ><span>作業項目</span></a
+                >
               </li>
+              <li></li>
               <li>
-                <a class="icon solid fa-sitemap" href="no-sidebar.html"><span>產品介紹</span></a>
-              </li>
-              <li>
-                <a class="icon solid fa-cog" href="left-sidebar.html"><span>聯絡我們</span></a>
+                <a class="icon solid fa-cog" href="left-sidebar.html"
+                  ><span>聯絡我們</span></a
+                >
               </li>
             </ul>
           </nav>
@@ -68,13 +77,17 @@
             <div class="col-4 col-6-medium col-12-small">
               <!-- Feature -->
               <section>
-                <a href="#" class="image featured"><img style="height: 344px" src="images/m-04.jpg" alt=""/></a>
+                <a href="#" class="image featured"
+                  ><img style="height: 344px" src="images/m-04.jpg" alt=""
+                /></a>
                 <header>
                   <h3>Okay, so what is this?</h3>
                 </header>
                 <p>
-                  This is <strong>Strongly Typed</strong>, a free, fully responsive site template by
-                  <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
+                  This is <strong>Strongly Typed</strong>, a free, fully
+                  responsive site template by
+                  <a href="http://html5up.net">HTML5 UP</a>. Free for personal
+                  and commercial use under the
                   <a href="http://html5up.net/license">CCA 3.0 license</a>.
                 </p>
               </section>
@@ -82,27 +95,34 @@
             <div class="col-4 col-6-medium col-12-small">
               <!-- Feature -->
               <section>
-                <a href="#" class="image featured"><img src="images/m-03.jpg" alt=""/></a>
+                <a href="#" class="image featured"
+                  ><img src="images/m-03.jpg" alt=""
+                /></a>
                 <header>
                   <h3>Nice! What is HTML5 UP?</h3>
                 </header>
                 <p>
                   <a href="http://html5up.net">HTML5 UP</a> is a side project of
-                  <a href="http://twitter.com/ajlkn">AJ’s</a> (= me). I started it as a way to both test my responsive
-                  tools and sharpen up my coding and design skills a bit.
+                  <a href="http://twitter.com/ajlkn">AJ’s</a> (= me). I started
+                  it as a way to both test my responsive tools and sharpen up my
+                  coding and design skills a bit.
                 </p>
               </section>
             </div>
             <div class="col-4 col-6-medium col-12-small">
               <!-- Feature -->
               <section>
-                <a href="#" class="image featured"><img src="images/m-05.jpg" alt=""/></a>
+                <a href="#" class="image featured"
+                  ><img src="images/m-05.jpg" alt=""
+                /></a>
                 <header>
                   <h3>What's this built with?</h3>
                 </header>
                 <p>
-                  <strong>Responsive Tools</strong> is a simple set of tools for building responsive sites and apps. All
-                  of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.
+                  <strong>Responsive Tools</strong> is a simple set of tools for
+                  building responsive sites and apps. All of my templates at
+                  <a href="http://html5up.net">HTML5 UP</a> are built using
+                  these tools.
                 </p>
               </section>
             </div>
@@ -145,7 +165,11 @@
                       <textarea name="message" placeholder="請輸入"></textarea>
                     </div>
                     <div class="col-12" style="text-align: right">
-                      <a href="#" class="form-button-submit button icon solid fa-envelope">傳 送</a>
+                      <a
+                        href="#"
+                        class="form-button-submit button icon solid fa-envelope"
+                        >傳 送</a
+                      >
                     </div>
                   </div>
                 </form>
