--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -460,35 +460,10 @@
                 </ul>
               </li>
               <li>
-                <span class="opener">範例</span>
+                <span class="opener">智能管理系統</span>
                 <ul>
-                  <li>
-                    <span>範例1</span>
-                    <ul>
-                      <li><a href="#">Lorem Dolor</a></li>
-                      <li><a href="#">Ipsum Adipiscing</a></li>
-                      <li><a href="#">Tempus Magna</a></li>
-                      <li><a href="#">Feugiat Veroeros</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <span>範例2</span>
-                    <ul>
-                      <li><a href="#">Lorem Dolor</a></li>
-                      <li><a href="#">Ipsum Adipiscing</a></li>
-                      <li><a href="#">Tempus Magna</a></li>
-                      <li><a href="#">Feugiat Veroeros</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <span>範例3</span>
-                    <ul>
-                      <li><a href="#">Lorem Dolor</a></li>
-                      <li><a href="#">Ipsum Adipiscing</a></li>
-                      <li><a href="#">Tempus Magna</a></li>
-                      <li><a href="#">Feugiat Veroeros</a></li>
-                    </ul>
-                  </li>
+                  <li><a href="mes.html">智能倉庫管理系統</a></li>
+                  <li><a href="shopfloor.html">Shop-Floor管理系統</a></li>
                 </ul>
               </li>
               <li><a href="contact.html">聯絡我們</a></li>
