--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -222,8 +222,11 @@
               </div>
               <div class="col-6 col-12-medium">
                 <h2>全自動印刷機 HTGD-GD2000</h2>
-                <p>
-                  1.自動定位架設鋼板<br />2.可自行設置清潔的間距以及擦拭的模式
+                <p style="font-size: 16px">
+                  智能快速實現不同厚度PCB板與其傳輸、夾持機構的匹配。<br />
+                  全新的光路系統--均勻的環形光和高亮度的同軸光，配以均可無極調節的亮度功能，使得各類型的Mark點均可很好的識別（包括凹凸不平的Mark點），適應鍍錫、鍍銅、鍍金、噴錫、FPC等各類型不同顏色的PCB。<br />
+                  四路光源可調，上下同照鋼網和PCB板。<br />
+                  針對於前後刮刀壓力所需不同及升降的穩定性而設計，防止錫膏外洩及刀片具有一定彈性的裝夾設計，刮刀的壓力，升降速度，印刷速度，印刷範圍均軟件可調，且為客戶提供了多種脫模方式來適應不同下錫要求的PCB板，為客戶提供了一個良好的印刷控制平台。
                 </p>
               </div>
             </div>
