--- a/bailichu/shopfloor.html
+++ b/bailichu/shopfloor.html
@@ -98,7 +98,7 @@
               </div>
             </div>
             <header class="major">
-              <h2>放錯料作業</h2>
+              <h2>防錯料作業</h2>
             </header>
             <div class="row">
               <div class="col-6 col-12-small">
