--- a/bailichu/shopfloor.html
+++ b/bailichu/shopfloor.html
@@ -55,6 +55,135 @@
             <span class="image main"
               ><img src="images/mes/module.png" alt=""
             /></span>
+            <hr />
+            <header class="major">
+              <h2>料卷自動扣帳功能</h2>
+            </header>
+            <p style="font-size: 18px;">
+              料卷檢查正確上料後，機器開始作業，
+              當機器打完一片板子後，拋出每個站位的用料量。<br />
+              透過程式自動到系統個每個棧位元扣帳 將料卷的剩餘數量呈現到SMT
+              Monitor，並提示User需要換料的站位元。
+            </p>
+            <span class="image fit"
+              ><img src="images/mes/img5.png" alt=""
+            /></span>
+            <hr />
+            <header class="major">
+              <h2>SMT物料追溯紀錄</h2>
+            </header>
+            <p>
+              <span style="font-size: 18px; ">
+                正向追溯：依據工單追溯 ,
+                <span style="color:red;">SN(PCBA)追溯 </span>,
+                料號追溯可追溯下列資料 :
+              </span>
+            </p>
+            <div class="table-wrapper">
+              <table class="alt">
+                <tbody>
+                  <tr>
+                    <td>料號</td>
+                    <td style="color:red;">工單</td>
+                    <td>SN</td>
+                    <td>拼板號</td>
+                    <td>工作站</td>
+                    <td>產線代碼</td>
+                    <td>子件料號</td>
+                    <td>子件序號/UPN</td>
+                    <td>設備</td>
+                    <td>區域</td>
+                  </tr>
+                  <tr>
+                    <td>料站</td>
+                    <td>通道</td>
+                    <td>託盤</td>
+                    <td>系統用量</td>
+                    <td>實際用量</td>
+                    <td>拋料數量</td>
+                    <td>識別錯誤數</td>
+                    <td>吸附錯誤數</td>
+                    <td style="color:red;">飛達</td>
+                    <td style="color:red;">鋼網</td>
+                  </tr>
+                  <tr>
+                    <td style="color:red;">刮刀</td>
+                    <td style="color:red;">錫膏</td>
+                    <td>客戶</td>
+                    <td>供應商</td>
+                    <td>日期碼</td>
+                    <td>批號</td>
+                    <td>供應商條碼</td>
+                    <td>研發物料</td>
+                    <td>創建人員</td>
+                    <td>創建時間</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <p>
+              <span style="font-size: 18px; ">
+                反向追溯:依據供應商,
+                <span style="color:red;">Reel ID </span>, , 日期碼, 批號,
+                子件料號, 料號等可追溯下列資料 :
+              </span>
+            </p>
+            <div class="table-wrapper">
+              <table class="alt">
+                <tbody>
+                  <tr>
+                    <td>料號</td>
+                    <td style="color:red;">工單</td>
+                    <td style="color:red;">SN</td>
+                    <td>拼板號</td>
+                    <td>託盤</td>
+                    <td>工作站</td>
+                    <td>產線代碼</td>
+                    <td>子件料號</td>
+                    <td>子件序號/UPN</td>
+                    <td>設備</td>
+                  </tr>
+                  <tr>
+                    <td>區域</td>
+                    <td>料站</td>
+                    <td>通道</td>
+                    <td>系統用量</td>
+                    <td>實際用量</td>
+                    <td>拋料數量</td>
+                    <td>識別錯誤數</td>
+                    <td>吸附錯誤數</td>
+                    <td>飛達</td>
+                    <td>鋼網</td>
+                  </tr>
+                  <tr>
+                    <td>刮刀</td>
+                    <td>錫膏</td>
+                    <td>客戶</td>
+                    <td>供應商</td>
+                    <td>日期碼</td>
+                    <td>批號</td>
+                    <td>供應商條碼</td>
+                    <td>研發物料</td>
+                    <td>創建人員</td>
+                    <td>創建時間</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <hr />
+            <header class="major">
+              <h2>SMT物料正向追溯內容描述</h2>
+            </header>
+            <span class="image fit"
+              ><img src="images/mes/img6.png" alt=""
+            /></span>
+            <hr />
+            <header class="major">
+              <h2>SMT物料反向追溯內容描述</h2>
+            </header>
+            <span class="image fit"
+              ><img src="images/mes/img7.png" alt=""
+            /></span>
           </section>
         </div>
       </div>
