--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -74,6 +74,12 @@
               </div>
             </div>
 
+            <header class="major">
+              <h2>生產線設備配置圖 LINE Equipment</h2>
+            </header>
+            <span class="image main"
+              ><img src="images/capacity/setting.jpg" alt=""
+            /></span>
             <h1>生產流程 Production Flow Chart</h1>
             <span class="image main"
               ><img src="images/capacity/flow_chart3.png" alt=""
