--- a/bailichu/shopfloor.html
+++ b/bailichu/shopfloor.html
@@ -79,48 +79,10 @@
                 料號追溯可追溯下列資料 :
               </span>
             </p>
-            <div class="table-wrapper">
-              <table class="alt">
-                <tbody>
-                  <tr>
-                    <td>料號</td>
-                    <td style="color:red;">工單</td>
-                    <td>SN</td>
-                    <td>拼板號</td>
-                    <td>工作站</td>
-                    <td>產線代碼</td>
-                    <td>子件料號</td>
-                    <td>子件序號/UPN</td>
-                    <td>設備</td>
-                    <td>區域</td>
-                  </tr>
-                  <tr>
-                    <td>料站</td>
-                    <td>通道</td>
-                    <td>託盤</td>
-                    <td>系統用量</td>
-                    <td>實際用量</td>
-                    <td>拋料數量</td>
-                    <td>識別錯誤數</td>
-                    <td>吸附錯誤數</td>
-                    <td style="color:red;">飛達</td>
-                    <td style="color:red;">鋼網</td>
-                  </tr>
-                  <tr>
-                    <td style="color:red;">刮刀</td>
-                    <td style="color:red;">錫膏</td>
-                    <td>客戶</td>
-                    <td>供應商</td>
-                    <td>日期碼</td>
-                    <td>批號</td>
-                    <td>供應商條碼</td>
-                    <td>研發物料</td>
-                    <td>創建人員</td>
-                    <td>創建時間</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+
+            <span class="image fit"
+              ><img src="images/mes/table1.png" alt=""
+            /></span>
             <p>
               <span style="font-size: 18px; ">
                 反向追溯:依據供應商,
@@ -128,48 +90,9 @@
                 子件料號, 料號等可追溯下列資料 :
               </span>
             </p>
-            <div class="table-wrapper">
-              <table class="alt">
-                <tbody>
-                  <tr>
-                    <td>料號</td>
-                    <td style="color:red;">工單</td>
-                    <td style="color:red;">SN</td>
-                    <td>拼板號</td>
-                    <td>託盤</td>
-                    <td>工作站</td>
-                    <td>產線代碼</td>
-                    <td>子件料號</td>
-                    <td>子件序號/UPN</td>
-                    <td>設備</td>
-                  </tr>
-                  <tr>
-                    <td>區域</td>
-                    <td>料站</td>
-                    <td>通道</td>
-                    <td>系統用量</td>
-                    <td>實際用量</td>
-                    <td>拋料數量</td>
-                    <td>識別錯誤數</td>
-                    <td>吸附錯誤數</td>
-                    <td>飛達</td>
-                    <td>鋼網</td>
-                  </tr>
-                  <tr>
-                    <td>刮刀</td>
-                    <td>錫膏</td>
-                    <td>客戶</td>
-                    <td>供應商</td>
-                    <td>日期碼</td>
-                    <td>批號</td>
-                    <td>供應商條碼</td>
-                    <td>研發物料</td>
-                    <td>創建人員</td>
-                    <td>創建時間</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+            <span class="image fit"
+              ><img src="images/mes/table2.png" alt=""
+            /></span>
             <hr />
             <header class="major">
               <h2>SMT物料正向追溯內容描述</h2>
