--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -23,7 +23,7 @@
           <!-- Header -->
           <header id="header">
             <a href="index.html" class="logo"
-              ><img width="300px" src="images/big-logo.png" alt=""
+              ><img width="400px" src="images/big-logo.png" alt=""
             /></a>
           </header>
 
@@ -31,8 +31,8 @@
           <section id="banner">
             <div class="content">
               <header>
-                <h1 style="font-size: 3em; margin: 0;">百里助企業有限公司</h1>
-                <h2 style="font-weight: normal">
+                <h1 style="font-size: 2.5em; margin: 0;">百里助企業有限公司</h1>
+                <h2 style="font-size: 1.25em;font-weight: normal">
                   BAI LI CHU ENTERPRISE CO.,LTD
                 </h2>
               </header>
@@ -129,9 +129,8 @@
             </header>
             <div class="posts">
               <article>
-                <a href="#" class="image">
-                  <img src="images/ISO.bmp" alt=""
-                /></a>
+                <h3>ISO 9001-2015</h3>
+                <a class="image"> <img src="images/ISO.bmp" alt=""/></a>
               </article>
             </div>
           </section>
