--- a/bailichu/shopfloor.html
+++ b/bailichu/shopfloor.html
@@ -25,7 +25,7 @@
           <!-- Header -->
           <header id="header">
             <a href="index.html" class="logo"
-              ><img width="300px" src="images/big-logo.png" alt="" />
+              ><img width="400px" src="images/big-logo.png" alt="" />
             </a>
           </header>
 
@@ -38,7 +38,7 @@
               <p>
                 本公司為增進生產效率及品質，特別導入MES置造管制系統(Manufacturing
                 Execution systen)也稱為Shop Floor control
-                該系統包含了智能倉庫管理，防錯料管理及生產品或吉維修管理等，使本公司縮短了備料、上料換線之時間，使生產更有效率，也可以管理追朔產品的生產及維修過程，使產品及損料的管理更智慧化、系統化，更重要的事已電腦進行稽核每一段製程的品質，確保產品生產的品質的真實性及一致性，以滿足客戶對嚴苛可信賴產品的要求。
+                該系統包含了智能倉庫管理，防錯料管理及生產品質與維修管理等，使本公司縮短了備料、上料換線之時間，使生產更有效率，也可以管理追朔產品的生產及維修過程，使產品及物料的管理更智慧化、系統化，更重要的是以電腦進行稽核每一段製程的品質，確保產品生產的品質的真實性及一致性，以滿足客戶對嚴苛可信賴度產品的要求。
               </p>
             </div>
             <hr />
