--- a/bailichu/contact.html
+++ b/bailichu/contact.html
@@ -24,11 +24,12 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <a href="index.html" class="logo">
-              <strong>
-                <img width="400px" src="images/big-logo.png" alt="" />
-              </strong>
-            </a>
+            <a href="index.html" class="logo"
+              ><img
+                style="width: 100%; max-width: 400px;"
+                src="images/big-logo.png"
+                alt=""
+            /></a>
           </header>
 
           <!-- Banner -->
@@ -52,12 +53,20 @@
 
               <p>
                 <span class="fa fa-envelope" aria-hidden="true"></span>
+                客服信箱: wenson@bailichu.com.tw
+              </p>
+              <p>
+                <span class="fa fa-envelope" aria-hidden="true"></span>
                 客服信箱: nicole@bailichu.com.tw
+              </p>
+              <p>
+                <span class="fa fa-envelope" aria-hidden="true"></span>
+                客服信箱: carol@bailichu.com.tw
               </p>
             </div>
             <span class="image object">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.8558343570853!2d121.67217131510348!3d25.072874983954115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d53a78eb8cb5f%3A0xda8c4e24455d1bad!2zMjIx5paw5YyX5biC5rGQ5q2i5Y2A5aSn5ZCM6Lev5LiJ5q61MjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1569160175137!5m2!1szh-TW!2stw"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.8558343570853!2d121.67217131510343!3d25.072874983954115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d53a78eb8cb5f%3A0xda8c4e24455d1bad!2zMjIx5paw5YyX5biC5rGQ5q2i5Y2A5aSn5ZCM6Lev5LiJ5q61MjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1570012027881!5m2!1szh-TW!2stw"
                 width="100%"
                 height="100%"
                 frameborder="0"
@@ -165,9 +174,17 @@
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
+                <a href="mailto:wenson@bailichu.com.tw"
+                  >wenson@bailichu.com.tw</a
+                >
+              </li>
+              <li class="icon solid fa-envelope">
                 <a href="mailto:nicole@bailichu.com.tw"
                   >nicole@bailichu.com.tw</a
                 >
+              </li>
+              <li class="icon solid fa-envelope">
+                <a href="mailto:carol@bailichu.com.tw">carol@bailichu.com.tw</a>
               </li>
               <li class="icon solid fa-phone">02-8647-3497</li>
               <li class="icon solid fa-home">
