--- a/bailichu/shopfloor.html
+++ b/bailichu/shopfloor.html
@@ -25,8 +25,11 @@
           <!-- Header -->
           <header id="header">
             <a href="index.html" class="logo"
-              ><img width="400px" src="images/big-logo.png" alt="" />
-            </a>
+              ><img
+                style="width: 100%; max-width: 400px;"
+                src="images/big-logo.png"
+                alt=""
+            /></a>
           </header>
 
           <!-- Content -->
@@ -207,9 +210,17 @@
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
+                <a href="mailto:wenson@bailichu.com.tw"
+                  >wenson@bailichu.com.tw</a
+                >
+              </li>
+              <li class="icon solid fa-envelope">
                 <a href="mailto:nicole@bailichu.com.tw"
                   >nicole@bailichu.com.tw</a
                 >
+              </li>
+              <li class="icon solid fa-envelope">
+                <a href="mailto:carol@bailichu.com.tw">carol@bailichu.com.tw</a>
               </li>
               <li class="icon solid fa-phone">02-8647-3497</li>
               <li class="icon solid fa-home">
