--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -250,7 +250,7 @@
               </li>
               <li class="icon solid fa-phone">02-8647-3497</li>
               <li class="icon solid fa-home">
-                新北市汐止區大同路三段210號1樓
+                <a href="contact.html">新北市汐止區大同路三段210號1樓</a>
               </li>
             </ul>
           </section>
