--- a/bailichu/contact.html
+++ b/bailichu/contact.html
@@ -53,15 +53,21 @@
 
               <p>
                 <span class="fa fa-envelope" aria-hidden="true"></span>
-                客服信箱: wenson@bailichu.com.tw
+                <a href="mailto:wenson@bailichu.com.tw"
+                  >客服信箱: wenson@bailichu.com.tw</a
+                >
               </p>
               <p>
                 <span class="fa fa-envelope" aria-hidden="true"></span>
-                客服信箱: nicole@bailichu.com.tw
+                <a href="mailto:nicole@bailichu.com.tw"
+                  >客服信箱: nicole@bailichu.com.tw</a
+                >
               </p>
               <p>
                 <span class="fa fa-envelope" aria-hidden="true"></span>
-                客服信箱: carol@bailichu.com.tw
+                <a href="mailto:carol@bailichu.com.tw"
+                  >客服信箱: carol@bailichu.com.tw</a
+                >
               </p>
             </div>
             <span class="image object">
