--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -81,7 +81,7 @@
               <h2>生產線設備配置圖 LINE Equipment</h2>
             </header>
             <span class="image main"
-              ><img src="images/capacity/setting.jpg" alt=""
+              ><img src="images/capacity/setting.png" alt=""
             /></span>
             <h1>生產流程 Production Flow Chart</h1>
             <span class="image main"
