--- a/eCloud/index.html
+++ b/eCloud/index.html
@@ -6,22 +6,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
     <title>PAL Web Test Platform</title>
-    <link href="./css/app.886abd8d.css" rel="preload" as="style" />
+    <link href="./css/app.ba215872.css" rel="preload" as="style" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="preload" as="style" />
-    <link href="./js/app.cccbafe2.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.ef3642b5.js" rel="preload" as="script" />
+    <link href="./js/app.c019d092.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.bf1ac0f3.js" rel="preload" as="script" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="stylesheet" />
-    <link href="./css/app.886abd8d.css" rel="stylesheet" />
+    <link href="./css/app.ba215872.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but oort-helper doesn't work properly without JavaScript
-        enabled. Please enable it to continue.
+        >We're sorry but oort-helper doesn't work properly without JavaScript enabled. Please enable it to continue.
       </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.ef3642b5.js"></script>
-    <script src="./js/app.cccbafe2.js"></script>
+    <script src="./js/chunk-vendors.bf1ac0f3.js"></script>
+    <script src="./js/app.c019d092.js"></script>
   </body>
 </html>
